refactor: AutoLotto 를 Lotto 로 변경하고, 수동 생성 로또 기능 추가